styles.css
@import url("https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&family=Dancing+Script:wght@400..700&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Nanum+Gothic+Coding&display=swap");

* {
	margin: 0px;
	box-sizing: border-box;
	font-family: "Lato", sans-serif;
	color: var(--secondary);
}

:root {
	--primary: rgb(27, 36, 80);
	--secondary: white;
	--background-color: linear-gradient(rgb(34, 46, 102), rgb(20, 28, 60));
	--padding: 0rem 10%;
}

html {
	scroll-behavior: smooth;
	scroll-padding: 0;
	scroll-margin: 0;
}

body {
	background: rgb(27, 37, 81);
	background-position: fixed;
	background-size: cover;
	background-repeat: no-repeat;

	max-width: 100%;
	height: fit-content;
	overflow-x: hidden;
	/* overflow-y: hidden; */
}

body,
html {
	scroll-snap-type: mandatory;
	scroll-snap-type: y mandatory;
}

/* SECTIONS */

section {
	background: var(--background-color);
	min-height: 100vh;
	scroll-snap-align: start;
	scroll-snap-stop: always;
	padding-bottom: 4rem;
}

/* SOCIALS */

button:hover,
/* nav ol a:hover, */
#socials a:hover {
	filter: brightness(85%);
}

#socials {
	z-index: 1;
	scale: 0.75;
	position: fixed;
	display: flex;
	gap: 0.5rem;

	left: -1.3rem;
	bottom: 0.2rem;

	--height: 4rem;
	font-size: var(--height);
}

#links {
	padding: 0.7rem 1rem;
	background: rgb(44, 57, 120);
	border-radius: 2rem;
	display: flex;
	flex-direction: row;
	gap: 0.5rem;
	justify-content: center;
	align-items: center;
}

#links,
#cv {
	padding: 0.7rem 1rem;
	background: rgb(44, 57, 120);
}

#cv {
	aspect-ratio: 1/1;
	border-radius: 100%;
}

.text-icon {
	position: relative;
	aspect-ratio: 1/1;
	text-align: center;
	width: var(--height);
}

.text-icon p {
	font-family: "Nanum Gothic Coding", monospace;
	position: absolute;
	bottom: 1rem;
	left: 1.15rem;
	font-size: 1.7rem;
	font-weight: 1000;

	text-align: center;
}

#socials a,
#socials a:visited {
	color: var(--secondary);

	text-decoration: none;
}

#socials a * {
	text-align: center;
}

#pointer {
	scale: 0.75;
	position: absolute;
	bottom: 1.2rem;
	left: 13.5rem;
}

#pointer p {
	font-size: 2.8rem;
	rotate: 10deg;
	font-family: "Dancing Script", cursive;
	font-weight: normal;
}

#pointer i {
	font-size: 2rem;
	rotate: 190deg;
}

/* ABOUT */

#about {
	display: flex;
	flex-direction: column;
	justify-content: center;
	padding: var(--padding);
}

#about * {
	text-align: left;
}

h1 {
	font-size: 5rem;
	line-height: 110%;
	font-family: "DM Serif Text", serif;
	text-align: center;
	font-weight: 100;

	margin: 1rem 0%;
}

.title {
	padding: 3rem;
	padding-top: 2rem;
	margin: 0;

	scale: 0.85;
	font-family: "Dancing Script", cursive;
	font-weight: bolder;
}

#about h1 {
	font-size: 5rem;
}

h2 {
	font-family: "Nanum Gothic Coding", monospace;
	font-size: 3rem;
}

h3 {
	font-size: 2rem;
}

p {
	font-size: 1.5rem;
}

@keyframes bobbing {
	0%,
	100% {
		bottom: 2rem;
	}
	50% {
		bottom: 2.5rem;
	}
}

/* SCROLL */

#scroll {
	position: absolute;
	left: 0;
	right: 0;

	scale: 0.75;
	bottom: 0;
	margin: auto;
	width: fit-content;
}

#scroll-anim {
	animation: bobbing 1.5s ease-in-out infinite;

	position: relative;
	display: flex;
	margin: 0rem auto;
	flex-direction: column;
	align-items: center;
}

#scroll h2 {
	font-size: 2rem;
}

#arrows {
	font-size: 1.8rem;
	display: flex;
	gap: 0.5rem;
	margin-top: 0.75rem;
}

/* CONTAINER */

.container {
	z-index: 0;
	display: flex;
	flex-wrap: wrap;
	align-items: center;
	justify-content: center;

	margin: auto;
	margin-bottom: 1rem;
	text-align: center;

	scale: 0.9;
	--gap: 0.5rem;
	gap: var(--gap);
	--items: 5;

	padding: var(--padding);
}

.container a {
	margin: auto;
	width: 50%;
}

.card {
	min-width: 10rem;
	max-width: calc((100% - var(--gap) * (var(--items) - 1)) / var(--items));
	padding: 1rem;
	background: rgba(0, 0, 0, 0.15);
	border-radius: 0.5rem;
	display: flex;
	flex-direction: column;
}

/* CAROUSEL */

.carousel {
	width: 100%;
}

.carousel *,
#portfolio .info {
	transition: all 0.5s ease;
}

.carousel .container {
	--gap: 1rem;
	gap: var(--gap);
	padding: 0 var(--gap);
	flex-wrap: nowrap;
}

.carousel .card {
	opacity: 1;
	width: 50vw;
}

.carousel .inactive {
	opacity: 0.6;
	scale: 0.95;
}

.carousel .nav-buttons {
	display: flex;
	gap: 5rem;
	align-items: center;
	justify-content: center;
}

.carousel .nav-buttons button {
	aspect-ratio: 1/1;
	height: 5rem;
	border-radius: 100%;
	background: rgba(0, 0, 0, 0.4);
	font-size: 2rem;
	margin-bottom: 0.5rem;

	display: flex;
	justify-content: center;
	align-items: center;
}

/* INDICATOR BAR */

.indicator-bar {
	display: flex;
	justify-content: center;
	align-items: center;
	margin-bottom: 1rem;
}

.indicator {
	aspect-ratio: 1/1;
	width: 2rem;
	display: flex;
	justify-content: center;
	align-items: center;
}

.dot {
	aspect-ratio: 1/1;
	border-radius: 100%;
	width: 1rem;
	background: var(--secondary);
}

.dot.inactive {
	scale: 0.8;
}

/* BUTTONS */

button {
	padding: 0.5rem;
	background: var(--secondary);
	font-weight: bold;
	border: none;
	--shadow: 0.3rem;
	--delta: 0.15rem;
	--shadow-color: rgba(0, 0, 0, 0.5);
	box-shadow: var(--shadow) var(--shadow) var(--shadow-color);
}

a button {
	width: 100%;
	font-size: 1.5rem;
	border-radius: 2rem;
	color: var(--primary);
}

button:active {
	--active-shadow: calc(var(--shadow) - var(--delta));
	transform: translateX(var(--delta)) translateY(var(--delta));
	box-shadow: var(--active-shadow) var(--active-shadow) var(--shadow-color);
}

.carousel .nav-buttons button {
	--shadow: 0.5rem;
	--delta: 0.3rem;
	--shadow-color: rgba(0, 0, 0, 0.25);
	color: var(--primary);
	background: var(--secondary);
}

/* SKILLS CONTAINERS */

#skills .container {
	--gap: 1rem;
	--items: 5;
}

#skills .card {
	background: rgba(56, 65, 117, 0.61);
	border-radius: 2.5rem;
	padding: 1.75rem;
	display: flex;
	justify-content: center;
	align-items: center;
	gap: 1rem;
}

#skills .card img {
	width: 80%;
	margin-bottom: 1rem;
}

#skills .card h3 {
	font-weight: normal;
}

/* PORTFOLIO CONTAINERS */

#portfolio .card {
	border-radius: 1.2rem;
}

#portfolio .container h3 {
	font-size: 2.5rem;
}

#portfolio .container img {
	aspect-ratio: 3/2;
	border-radius: 1rem;
	margin-bottom: 0.75rem;
}

#portfolio .container .date {
	padding: 0%;
	margin: 0;
	font-size: 1.25rem;
	color: rgb(187, 187, 187);
}

#portfolio {
	position: relative;
	overflow: visible;
}

#portfolio .info {
	font-size: 1.4rem;
	width: 80%;
	/* position: absolute;
	left: 0;
	right: 0; */
	margin: auto;
	text-align: justify;
}

#portfolio .info.inactive {
	transform: translateY(100vh);
	height: 0;
}

.desc {
	display: flex;
	align-items: center;
	justify-content: center;
	--size: 1.5rem;
	font-size: var(--size);
	height: calc(var(--size) * 2);
	margin: 1rem 0rem;
}

article p {
	font-size: 1.5rem;
	margin-top: 2rem;
	padding: 0 10%;
	text-align: center;
}

@media screen and (max-width: 576px) {
	nav {
		display: none;
	}
	section {
		padding: 0;
		padding-bottom: 6rem;
	}
	article {
		margin-top: 1rem;
		margin-bottom: 3rem;
	}
	article p {
		font-size: 1.25rem;
		margin-top: 0rem;
		padding: 0 2rem;
		text-align: left;
	}
	#about {
		padding: 0px 5%;
	}
	.title {
		scale: 1;
		font-size: 3.5rem;
		padding: 2rem 0%;
		margin-bottom: 0;
	}
	#pointer {
		scale: 1;
		bottom: 1.4rem;
		left: 12.5rem;
	}
	#pointer p {
		font-size: 2.2rem;
	}
	#pointer i {
		font-size: 1.5rem;
		rotate: 190deg;
	}
	*/ .carousel .container {
		width: min-content;
	}
	.carousel .card {
		min-width: 70vw;
	}
	.container a {
		width: 50%;
	}
	.container a button {
		padding: 1rem;
		font-size: 1.5rem;
	}
	.card {
		min-width: 10rem;
		scale: 1;
	}

	#portfolio .container {
		--gap: 0.25rem;
	}
	#portfolio .container .date {
		font-size: 1rem;
		margin-top: 0.5rem;
	}
	#portfolio .container h3 {
		font-size: 2rem;
	}
	#portfolio .desc {
		margin: 0.5rem 0rem;
	}
	#portfolio .desc * {
		font-size: 1.2rem;
	}

	#skills .container {
		--gap: 0.5rem;
		padding: 0;
	}
	#skills .card {
		padding: 1.25rem;
	}
	#skills .card img {
		width: 70%;
		margin-bottom: 0rem;
	}
	#skills .card h3 {
		font-size: 1.5rem;
	}

	#about {
		justify-content: left;
		padding-top: 40%;
	}
	#about h2 {
		font-size: 2rem;
	}
	#about h1 {
		font-size: 5rem;
	}

	#socials {
		scale: 75%;
		left: -1.1rem;
		bottom: 0.2rem;
	}

	#scroll {
		scale: 75%;
		bottom: 15%;
	}
	#scroll-anim {
		animation-duration: 2s;
	}
}

